datetime fixes:  - use more user-friendly titles for Timeline links (both for timeline: TracLinks and dateinfo ones)  - use more dateinfo links in the templates, in particular in the Ticket change history (fixes #4756)  - fix precision of `timeline:` TracLinks (the optional Z... part should be cut off)
Also related to #2182, as it anticipates the use of a 'datefmt' user setting.



git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4766 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/diff_view.html
+++ b/templates/diff_view.html
@@ -43,7 +43,7 @@
         <dt class="property time">Timestamp:</dt>
         <dd class="time" py:choose="">
           <em py:when="multi" class="multi">(multiple changes)</em>
-          <py:when test="change.date">${format_datetime(change.date)} (${pretty_timedelta(change.date)} ago)</py:when>
+          <py:when test="change.date">${format_datetime(change.date)} (${dateinfo(change.date)} ago)</py:when>
           <py:otherwise>--</py:otherwise>
         </dd>
         <dt class="property author">Author:</dt>
