--- a/templates/wiki_history.html
+++ b/templates/wiki_history.html
@@ -46,7 +46,7 @@
               <td class="version">
                 <a href="${href.wiki(page.name, version=item.version)}" title="View this version">$item.version</a>
               </td>
-              <td class="date">${format_datetime(item.date)}</td>
+              <td class="date">${dateinfo(item.date)}</td>
               <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None}">${authorinfo(item.author)}</td>
               <td class="comment">${wiki_to_oneliner(context, item.comment, shorten=True)}</td>
             </tr>
