--- a/templates/ticket_history.html
+++ b/templates/ticket_history.html
@@ -49,7 +49,7 @@
               <td class="version">
                 <a href="${href.ticket(ticket.id, version=item.version)}" title="View this version">$item.version</a>
               </td>
-              <td class="date">${format_datetime(item.date)}</td>
+              <td class="date">${dateinfo(item.date)}</td>
               <td class="author" title="${item.ipnr and 'IP-Address: ' + item.ipnr or None}">$item.author</td>
               <td class="comment">${wiki_to_oneliner(context, item.comment, shorten=True)}</td>
             </tr>
