--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -128,7 +128,7 @@
                         @$item.existing_rev</a>
                     </td>
                     <td class="chgset">
-                      <a title="View changeset [$item.rev]" href="${href.changeset(item.rev)}">
+                      <a title="View changeset [$item.rev] for $item.path" href="${href.changeset(item.rev, item.path)}">
                         [$item.rev]</a>
                     </td>
                     <td class="date" py:content="format_datetime(change.date)"/>
