--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -57,6 +57,8 @@
           <label>View log starting at <input type="text" id="rev" name="rev" value="${items[0].rev}" size="5" /></label>
           <label>and back to <input type="text" id="stop_rev" name="stop_rev" value="$stop_rev" size="5" /></label>
           <br />
+          <label>Show at most <input type="text" id="limit" name="limit" value="$limit" size="2" maxlength="3" /></label> revisions per page.
+          <br />
           <label><input type="checkbox" id="verbose" name="verbose" checked="${verbose and 'checked' or None}" />
             Show full log messages</label>
         </div>
