Shorten line when displaying one-liner wikified message in the revision log view.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4789 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -138,7 +138,7 @@
                     <td class="summary" py:choose="">
                       <py:when test="verbose"></py:when>
                       <py:when test="wiki_format_messages">
-                        ${wiki_to_oneliner(change_context, change.message)}
+                        ${wiki_to_oneliner(change_context, change.message, shorten=True)}
                       </py:when>
                       <py:otherwise>shorten_line(change.message)</py:otherwise>
                     </td>
