Keep the requested rev in the ''From revision'' field, so that the doesn't change when switching the Revision Log Mode. Fixes #2303.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4791 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -54,7 +54,7 @@
               </label>
             </fieldset>
           </div>
-          <label>View log starting at <input type="text" id="rev" name="rev" value="${items[0].rev}" size="5" /></label>
+          <label>View log starting at <input type="text" id="rev" name="rev" value="$rev" size="5" /></label>
           <label>and back to <input type="text" id="stop_rev" name="stop_rev" value="$stop_rev" size="5" /></label>
           <br />
           <label>Show at most <input type="text" id="limit" name="limit" value="$limit" size="2" maxlength="3" /></label> revisions per page.
