r4782 used a Genshi [genshi:milestone:0.4] feature... fix compatibility with 0.3.6. Closes #4777.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4793 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/query.html
+++ b/templates/query.html
@@ -196,8 +196,9 @@
           <input type="hidden" name="action" value="${edit and 'edit' or 'new'}" />
           <input type="hidden" name="query" value="${query.to_string(req)}" />
           <input type="submit" value="Save Query..."
-                 title="${edit and ('Save updated query in report {%s}' % report.id) or
+                 title="${edit and ('Save updated query in report:%s' % report.id) or
                           'Create a new report from current query'}" />
+          <!--! FIXME: Genshi 0.4:  'Save updated query in report {%s}' -->
         </form>
       </div>
 
