When `[changeset] wiki_format_messages` is set to false, <pre> should wrap the log message. Thanks to Sergei Haller for noticing the problem.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4799 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/changeset.html
+++ b/templates/changeset.html
@@ -128,7 +128,7 @@
             <py:when test="wiki_format_messages">
               ${wiki_to_html(context, changeset.message, escape_newlines=True)}
             </py:when>
-            <py:otherwise>${changeset.message}</py:otherwise>
+            <py:otherwise><pre>${changeset.message}</pre></py:otherwise>
           </dd>
         </py:if>
         <py:if test="location and len(files) &gt; 1">
