Follow-up to r4437: fix small glitch when wiki_format_messages was false, in the TracRevisionLog.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4800 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -140,7 +140,7 @@
                       <py:when test="wiki_format_messages">
                         ${wiki_to_oneliner(change_context, change.message, shorten=True)}
                       </py:when>
-                      <py:otherwise>shorten_line(change.message)</py:otherwise>
+                      <py:otherwise>${shorten_line(change.message)}</py:otherwise>
                     </td>
                     </py:when>
                     <td colspan="6" py:otherwise="" />
