--- a/templates/browser.html
+++ b/templates/browser.html
@@ -27,11 +27,13 @@
     <div id="ctxtnav" class="nav">
       <ul>
         <li class="first"><a href="${href.changeset(rev, created_path)}">Last Change</a></li>
-        <li py:if="file">
-          <a href="${href.browser(created_path, rev=rev, annotate=not file.annotate or None)}"
-             title="Annotate each line with the last changed revision. This can be time consuming...">
-            ${['Annotate', 'Normal'][bool(file.annotate)]}
-          </a>
+        <li py:if="file" py:choose="">
+          <a py:when="file.annotate" href="${href.browser(created_path, rev=rev)}" 
+             title="View file without annotations">
+            Normal</a>
+          <a py:otherwise="" href="${href.browser(created_path, rev=rev, annotate=file.annotate)}"
+             title="Annotate each line with the last changed revision (this can be time consuming...)">
+            Annotate</a>
         </li>
         <li class="last"><a href="${href.log(path, rev=rev)}">Revision Log</a></li>
       </ul>
