--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -36,10 +36,10 @@
             test="ticket.type"> ${ticket.type}</py:if><py:if
             test="ticket.resolution">: ${ticket.resolution}</py:if>)</span>
         <py:choose test="">
+          <py:when test="version is None" />
           <py:when test="version == 0">
             &mdash; at <a href="#comment:description">Initial Version</a>
           </py:when>
-          <py:when test="isinstance(version, Undefined)" />
           <py:otherwise>
             &mdash; at <a href="#comment:$version">Version $version</a>
           </py:otherwise>
