Split up template directories so that the templates inside the packages of the sub-system they're used by.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4821 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/query.html
+++ b/trac/ticket/templates/query.html
@@ -183,7 +183,7 @@
         initializeFilters();
       </script>
 
-      <xi:include href="query_div.html" />
+      <xi:include href="query_results.html" />
 
       <div class="buttons" py:with="edit = report and 'REPORT_MODIFY' in req.perm;
                      new = 'REPORT_CREATE' in req.perm">
