''Alternate format'' links are now `rel="nofollow"`. Reduces server load for essentially redundant content.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4828 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -68,7 +68,7 @@
         <ul>
           <li py:for="idx, link in enumerate(chrome.links.alternate)"
             class="${first_last(idx, chrome.links.alternate)}">
-            <a href="${link.href}" class="${link['class']}" py:content="link.title" />
+            <a rel="nofollow" href="${link.href}" class="${link['class']}" py:content="link.title" />
           </li>
         </ul>
       </div>
