Fix milestone retarget list in milestone delete template. Closes #4844.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4833 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/milestone_delete.html
+++ b/trac/ticket/templates/milestone_delete.html
@@ -30,7 +30,7 @@
       <label for="target">Retarget associated tickets to milestone</label>
       <select name="target" id="target">
         <option value="">None</option>
-        <option py:for="name in milestones">${name}</option>
+        <option py:for="m in milestones">${m.name}</option>
       </select>
       <div class="buttons">
        <input type="submit" name="cancel" value="Cancel" />
