Follow-up to r4848, fix syntax of conditional comments for IE.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4972 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/layout.html
+++ b/trac/templates/layout.html
@@ -17,12 +17,12 @@
       </py:for>
     </py:if>
     <py:if test="'SEARCH_VIEW' in perm" id="search">
-      <link type="application/opensearchdescription+xml" rel="search" 
+      <link type="application/opensearchdescription+xml" rel="search"
             href="${href.search('opensearch')}" title="Search $project.name"/>
     </py:if>
     <script py:for="script in chrome.scripts"
             type="${script.type}" src="${script.href}"></script>
-    ${Markup('&lt;!--[if IE lt 7]&gt;')}
+    ${Markup('&lt;!--[if lt IE 7]&gt;')}
     <script type="text/javascript" src="${href.chrome('common/js/ie_pre7_hacks.js')}"></script>
     ${Markup('&lt;![endif]--&gt;')}
     ${select("*[local-name() != 'title']")}
