When a logged in user was creating a ''New Ticket'', he could modify the ''Reporter:'' field, but that change was not taken into account.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4989 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -237,11 +237,10 @@
             <table>
               <tr>
                 <th>
-                  <label py:attrs="{'for': ticket.id and 'author' or 'field-reporter'}">Your email or username:</label><br />
+                  <label for="author">Your email or username:</label><br />
                 </th>
                 <td>
-                  <input py:if="ticket.id" type="text" id="author" name="author" size="40" value="${reporter_id}" />
-                  <input py:if="not ticket.id" type="text" id="field-reporter" name="field_reporter" size="40" value="${ticket.reporter}" />
+                  <input type="text" id="author" name="author" size="40" value="${ticket.reporter}" />
                   <br />
                 </td>
               </tr>
