Follow-up to r4989, clarify distinction between reporter and author (the utility function `get_reporter_id` should probably be renamed `get_author_id` as well)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4990 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -240,7 +240,7 @@
                   <label for="author">Your email or username:</label><br />
                 </th>
                 <td>
-                  <input type="text" id="author" name="author" size="40" value="${ticket.reporter}" />
+                  <input type="text" id="author" name="author" size="40" value="$author_id" />
                   <br />
                 </td>
               </tr>
