Ticket preview should warn if the summary is missing
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5018 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -93,7 +93,7 @@
                 ${ticket.summary}
               </py:when>
               <py:otherwise>
-                <i>(ticket summary)</i>
+                <div class="system-message">ticket summary missing</div>
               </py:otherwise>
             </py:choose>
           </h2>
