Template changes needed for change to strict error handling in Genshi. There may be yet more lurking in there.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5054 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/admin/templates/admin_components.html
+++ b/trac/admin/templates/admin_components.html
@@ -29,7 +29,7 @@
     </py:def>
 
     <py:choose>
-      <form py:when="component" class="mod" id="modcomp" method="post">
+      <form py:when="defined('component')" class="mod" id="modcomp" method="post">
         <fieldset>
           <legend>Modify Component:</legend>
           <div class="field">
