--- a/trac/admin/templates/admin_milestones.html
+++ b/trac/admin/templates/admin_milestones.html
@@ -13,7 +13,7 @@
     <h2>Manage Milestones</h2>
 
     <py:choose>
-      <form py:when="milestone" class="mod" id="modmil" method="post">
+      <form py:when="defined('milestone')" class="mod" id="modmil" method="post">
         <fieldset>
           <legend>Modify Milestone:</legend>
           <div class="field">
