--- a/trac/htdocs/css/search.css
+++ b/trac/htdocs/css/search.css
@@ -10,9 +10,7 @@
 #content.search #results dt { margin: 1.5em 0 0 }
 #content.search #results dt a { color: #33c }
 #content.search #results dd { font-size: 80%; margin: 0; padding: 0 }
-#content.search #results .author, #results .date, #results .keywords {
-  color: #090;
-}
+#content.search #results .author, #results .date { color: #090; }
 
 #content.search #quickjump { font-style: italic; font-weight: bold; }
 
