Follow-up to [5054]: another error fixed, and reduce traceback length on error reports from template expressions.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5055 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/templates/macros.html
+++ b/trac/templates/macros.html
@@ -67,7 +67,7 @@
                 title="${link.title}">Previous $label</a>
       <span py:otherwise="" class="missing">Previous $label</span>
     </li>
-    <li py:if="links.up and uplabel">
+    <li py:if="'up' in links and uplabel">
       <a py:with="link = links.up[0]" href="${link.href}"
          title="${link.title}">$uplabel</a>
     </li>
