Ticket preview: enhance the look of the comment/change preview
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5056 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -18,6 +18,8 @@ div#ticket.ticketdraft {
 }
 .ticketdraft {
  background: #f4f4f4 url(../draft.png);
+ border: 1px outset #996;
+ padding: 0 .2em;
 }
 
 h1 .status { color: #444; text-transform: lowercase; }
